2000-06-12  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm/fvwm.c: fvwm/borders.c:
	* fvwm/module_interface.c: fvwm/move_resize.c:
	* modules/FvwmIconBox/FvwmIconBox.c: modules/FvwmIconMan/FvwmIconMan.c:
	* modules/FvwmWinList/FvwmWinList.c:
	now builds with FVWM_DEBUG_MSGS defined

2000-06-10  olicha  <olivier.chapuis@free.fr>

	* sample/system.fvwm2rc-sample-95:
	Fixed pager swallowing
	
2000-06-09  Hippo

	* fvwm/move_resize.c: moved EdgeResistance code into doSnapAttraction()

2000-06-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetupTitleBar):
	fixed placement of title and button windows in a short title bar

	* fvwm/menus.c (menu_func):
	menus invoked from modules were executed in wrong window context

2000-06-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_complex_function):
	(ExecuteFunction):
	allow expose events while waiting for buttons to be released

	* fvwm/borders.c (RedrawBorder):
	(draw_frame_relief):
	fixed drawing of depressed fvwm borders on bottom and right side

	* fvwm/cursor.c (CursorStyle):
	fixed update of SYS cursorstyle for title buttons
	fixed update of DEFAULT cursorstyle for windows and icons

	* fvwm/update.c (apply_window_updates):
	fixed off screen decoration changes

	* fvwm/borders.c (SetupTitleBar):
	fixed top-left cursor over 'title' when windows are too small

	* fvwm/events.c (HandleButtonRelease):
	fixed title button being depressed if non-existing function bound to
	it

2000-06-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: changed version to 2.3.20

2000-06-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_window):
	fixed bug: when an unfocused transient was closed it stole away the
	focus and transfered it to some other window

2000-06-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (do_menu):
	fixed UMR

	* fvwm/session.c (MatchWinToSM):
	* fvwm/window_flags.h:
	* fvwm/events.c (HandleMapRequestKeepRaised):
	* fvwm/fvwm.h: